<?xml version="1.0"?>
<package format="3">
  <name>simple_depth_cam</name>
  <version>0.0.1</version>
  <description>Minimal robot with depth camera only</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robot_state_publisher</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Export plugins if needed -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

